--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "dependencies": {
+    "@types/body-parser": "^1.17.0",
     "@types/es6-shim": "^0.31.35",
     "@types/express": "^4.11.1",
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "typescript": "^2.7.1"
   },
   "scripts": {
-    "start":"node build/server",
+    "start": "node build/server",
     "build": "tsc"
   }
 }
